Validation fixed
