# swagger.json
@@ -65,7 +65,7 @@
                   "email": {
                     "example": "any"
                   },
-                  "studentsId": {
+                  "studentID": {
                     "example": "any"
                   },
                   "birthday": {
@@ -118,9 +118,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -138,7 +135,7 @@
                   "email": {
                     "example": "any"
                   },
-                  "studentsId": {
+                  "studentID": {
                     "example": "any"
                   },
                   "birthday": {
@@ -168,9 +165,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
